--- a/haitidata/templates/site_base.html
+++ b/haitidata/templates/site_base.html
@@ -1,12 +1,103 @@
 {% extends "base.html" %}
-{% block extra_head %}
-      <link href="{{ STATIC_URL }}css/site_base.css" rel="stylesheet"/>
-{% endblock %}
-{% block extra_tab %}
-{% comment %}
-Add Tab for Third Party Apps
-<li>
- <a href="{{ PROJECT_ROOT }}app">App</a>
-</li>
-{% endcomment %}
-{% endblock %}
+{% load i18n avatar_tags %}
+
+<!-- Navbar -->
+{% block header %}
+<nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+  <div class="container">
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+        <i class="fa fa-navicon fa-lg"></i>
+      </button>
+      <a class="navbar-brand" href="{% url "home" %}">HaitiData</a>
+    </div>
+    <div id="navbar" class="navbar-collapse collapse">
+      <ul class="nav navbar-nav toolbar">
+        {% block tabs %}
+        <li id="nav_layers">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">{% trans "Data" %}<i class="fa fa-angle-down fa-lg"></i></a>
+          <ul class="dropdown-menu">
+            <li><a href="{% url "layer_browse" %}">{% trans "Layers" %}</a></li>
+            <li><a href="{% url "document_browse" %}">{% trans "Documents" %}</a></li>
+            {% if user.is_authenticated %}
+            <li><a href="/uploads/">{% trans "Uploads" %}</a></li>
+            <li><a href="{% url "services" %}">{% trans "Remote Services" %}</a></li>
+            <li role="separator" class="divider"></li>
+            <li><a href="{% url "layer_upload" %}">Upload Layer</a></li>
+            <li><a href="{% url "document_upload" %}">Upload Document</a></li>
+            <li><a href="/uploads/new">Importer</a></li>
+            <li><a href="{% url "register_service" %}">{% trans "Add Remote Service" %}</a></li>
+            {% endif %}
+          </ul>
+        </li>
+        <li id="nav_maps">
+            {% if user.is_authenticated %}
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">{% trans "Maps" %}<i class="fa fa-angle-down fa-lg"></i></a>
+            <ul class="dropdown-menu">
+              <li><a href="{% url "maps_browse" %}">{% trans "Explore Maps" %}</a></li>
+              <li> <a href="{% url "new_map" %}">{% trans "Create Map" %}</a></li>
+            </ul>
+            {% else %}
+            <a href="{% url "maps_browse" %}">{% trans "Maps" %}</a>
+            {% endif %}
+          </li>
+          <li>
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">{% trans "About" %}<i class="fa fa-angle-down fa-lg"></i></a>
+            <ul class="dropdown-menu">
+              <li><a href="{% url "profile_browse" %}">{% trans "People" %}</a></li>
+              <li><a href="{% url "group_list" %}">{% trans "Groups" %}</a></li>
+              {% if perms.announcements.can_manage %}
+              <li><a href="{% url "announcements_list" %}">{% trans "Announcements" %}</a></li>
+              {% endif %}
+              {% if user.is_superuser %}
+              <li role="separator" class="divider"></li>
+              <li><a href="/admin/people/profile/add/">{% trans "Add User" %}</a></li>
+              <li><a href="{% url "account_invite_user" %}">{% trans "Invite User" %}</a></li>
+              <li><a href="{% url "group_create" %}">{% trans "Create Group" %}</a></li>
+              {% endif %}
+            </ul>
+          </li>
+          {% block extra_tab %}
+          {% endblock %}
+        {% endblock %}
+        </ul>
+        <ul class="nav navbar-nav navbar-right">
+          <li>
+            <div class="search">
+              <form id="search" action="{% url "search" %}" >
+                <span class="fa fa-search"></span>
+                {% if HAYSTACK_SEARCH %}
+                <input id="search_input" type="text" placeholder="Search" name="q">
+                {% else %}
+                <input id="search_input" type="text" placeholder="Search" name="title__icontains">
+                {% endif %}
+              </form>
+            </div>
+          </li>
+          {% if not user.is_authenticated and REGISTRATION_OPEN %}
+          <li><a href="{% url "account_signup" %}">{% trans "Register" %}</a></li>
+          {% endif %}
+          {% if user.is_authenticated %}
+          <li><a href="#" class="dropdown-toggle avatar" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">{% avatar user 42 %} {{ user.username }}<i class="fa fa-angle-down fa-lg"></i></a>
+            <ul class="dropdown-menu">
+              <li><a href="{{ user.get_absolute_url }}">{% trans "Profile" %}</a></li>
+              <li><a href="{% url "recent-activity" %}">{% trans "Recent Activity" %}</a></li>
+              <li><a href="{% url "messages_inbox" %}">{% trans "Inbox" %}</a></li>
+              <li role="separator" class="divider"></li>
+              <li><a href="{% url "admin:index" %}">Admin</a></li>
+              <li><a href="{{ GEOSERVER_BASE_URL }}">GeoServer</a></li>
+              <li role="separator" class="divider"></li>
+              <li><a href="{% url "help" %}">{% trans "Help" %}</li>
+              <li role="separator" class="divider"></li>
+              <li><a href="/account/logout/">Logout</a></li>
+            </ul>
+          </li>
+          {% else %}
+          <li><a href="#" data-toggle="modal" data-target="#SigninModal" role="button" >{% trans "Sign in" %} </a></li>
+          {% endif %}
+        </ul>
+      </div> <!--/.nav-collapse -->
+    </div>
+  </nav>
+  {% endblock header %}
+  <!-- End of Navbar -->
