--- a/haitidata/templates/_actions.html
+++ b/haitidata/templates/_actions.html
@@ -7,6 +7,7 @@
   {% if resource.is_mosaic %}
   <li><a href="#granules" data-toggle="tab"><i class="fa fa-bars"></i>{% trans "Granules" %}</a></li>
   {% endif %}
+  <li><a href="#charts" data-toggle="tab"><i class="fa fa-charts"></i>{% trans "Charts" %}</a></li>
   {% if SOCIAL_BUTTONS %}
   <li><a href="#share" data-toggle="tab"><i class="fa fa-share"></i>{% trans "Share" %}</a></li>
   {% endif %}
