--- a/haitidata/templates/charts_app/chart_base.html
+++ b/haitidata/templates/charts_app/chart_base.html
@@ -4,7 +4,7 @@
 
 {% block title %} {{ block.super }} {% endblock %}
 
-{% block body_class %}charts{% endblock %}
+{% block body_class %}Charts{% endblock %}
 
 {% block body_outer %}
 {% block body %}{% endblock body %}
