--- a/haitidata/templates/charts_app/chart_detail.html
+++ b/haitidata/templates/charts_app/chart_detail.html
@@ -151,6 +151,9 @@
               <button class="btn btn-primary btn-md btn-block">{% trans "Delete this Chart" %}</button>
          </a>
       </li>
+      <li class="list-group-item">
+         <button id='saveButton' class="btn btn-primary btn-md btn-block">Export my D3 visualization to PNG</button>
+      </li>
   </div>
 </div>
 
@@ -240,9 +243,7 @@ title_detail();
 
 
 </script>
- <div>
-<button id='saveButton'>Export my D3 visualization to PNG</button>
-</div>
+
  <script src="https://cdn.rawgit.com/eligrey/canvas-toBlob.js/f1a01896135ab378aa5c0118eadd81da55e698d8/canvas-toBlob.js"></script>
 	 <script src="https://cdn.rawgit.com/eligrey/FileSaver.js/e9d941381475b5df8b7d7691013401e171014e89/FileSaver.min.js"></script>
 
