--- a/haitidata/templates/layers/layer_detail.html
+++ b/haitidata/templates/layers/layer_detail.html
@@ -482,6 +482,7 @@
         {% endfor %}
         </ul>
     </li>
+    {% if "download_resourcebase" in perms_list %}
     <li class="list-group-item">
       <h4>{% trans "Create a chart using this layer" %}</h4>
       <p>{% trans "Click the button below to generate a new chart based on this layer, choosing a quantity and a category field." %}</p>
@@ -557,7 +558,7 @@
                </form>
           </div>
         </li>
-
+    {% endif %}
     <div id="chart_popup" class="modal fade" role="dialog" >
         <script src="/static/js/csv.js"></script>
         <script src="/static/js/donut.js"></script>
