Fix geonode viewer library

--- a/haitidata/templates/geonode-client/layer_map.html
+++ b/haitidata/templates/geonode-client/layer_map.html
@@ -1,6 +1,6 @@
+{% load geonode_client_tags %}
 
-
-
+{% client_viewer_js	%}
 <style>
 	#content {
 		position: relative;
@@ -20,8 +20,8 @@
         {% else %}
         printService: "",
         {% endif %}
-        /* The URL to a REST map configuration service.  This service 
-         * provides listing and, with an authenticated user, saving of 
+        /* The URL to a REST map configuration service.  This service
+         * provides listing and, with an authenticated user, saving of
          * maps on the server for sharing and editing.
          */
         rest: "{% url "maps_browse" %}",
