Initial layer template fix

--- a/haitidata/static/less/haitidata.less
+++ b/haitidata/static/less/haitidata.less
@@ -739,13 +739,32 @@ footer {
 				font-size: 0.825em;
 				height: 24px;
 				line-height: 1;
-				-webkit-appearance:none;
 				-webkit-box-shadow: none;
-				box-shadow: none;
+				        box-shadow: none;
 			}
 		}
 	}
 }
+
+#create-chart {
+	small {
+		color: @gray;
+		font-size: 0.825em;
+	}
+	form {
+		font-size: 0.825em;
+		.form-control {
+			background: none;
+			color: @gray-dark;
+			font-size: 0.825em;
+			height: 24px;
+			line-height: 1;
+			-webkit-box-shadow: none;
+				      box-shadow: none;
+		}
+	}
+}
+
 
 /* ------ OSGeo Importer
 ------------------------------ */
