--- a/haitidata/templates/layers/layer_detail.html
+++ b/haitidata/templates/layers/layer_detail.html
@@ -8,7 +8,18 @@
 {% load base_tags %}
 {% load guardian_tags %}
 
-{% block title %}{{ resource.title|default:resource.typename }} — {{ block.super }}{% endblock %}
+{% block title %}{{ block.super }} {% trans "Layers" %} | {{ resource.title|default:resource.typename }}{% endblock %}
+{% block page-title %}
+  {% trans "Explore Layers" %}
+  <div class="btn-group pull-right">
+    <a class="btn btn-primary btn-icon" href="{% url "layer_browse" %}">
+      <i class="fa fa-bars" title="All Layers"></i>
+    </a>
+    <a class="btn btn-primary" href="{% url "layer_browse" %}">
+      {% trans "All Layers" %}
+    </a>
+  </div>
+{% endblock %}
 
 {% block head %}
 
@@ -35,10 +46,36 @@
 
 {% block body_class %}layers{% endblock %}
 
+{% block subheader %}
+<section id="subheader">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-12">
+        <h2>{{ resource.title|default:resource.typename }}</h2>
+        <p>
+				    {{ resource.service_type }}
+				    {% if resource.category %}
+					  {% trans "in" %} <a href="{% url "search" %}?category__identifier__in={{ resource.category.identifier }}">{{ resource.category }}</a> |
+				    {% endif %}
+					  {% if resource.date %}
+					    {% if resource.date_type == 'creation' %} {% trans "Created on" %} {{ resource.date }}
+					    {% elif resource.date_type == 'publication' %} {% trans "Published on" %} {{ resource.date }}
+					    {% else %} {% trans "Updated on" %} {{ resource.date }}
+						{% endif %}
+					{% endif %}
+				</p>
+				{% block social_links %}
+				{% if SOCIAL_BUTTONS %}
+				{% include "social_links.html" %}
+				{% endif %}
+				{% endblock %}
+      </div>
+    </div>
+  </div>
+</section>
+{% endblock %}
+
 {% block body_outer %}
-<div class="page-header">
-  <h2 class="page-title">{{ resource.title|default:resource.typename }}</h2>
-</div>
 
 <div class="row">
   <div class="col-md-8">
@@ -199,24 +236,6 @@
               </tbody>
             </table>
         {% endif %}
-      </article>
-
-      {% block social_links %}
-      {% if SOCIAL_BUTTONS %}
-        {% include "social_links.html" %}
-      {% endif %}
-      {% endblock %}
-
-      <article id="charts" class="tab-pane">
-      <ul>
-      {% for chart in resource.chart_set.all %}
-        <li><a href="{% url 'chart_detail' chart.id %}">{{ chart.get_type_display }}</a>, Category field = {{chart.category}}, Quantity field = {{chart.quantity}}</li>
-      {% empty %}
-        <li><h4>No charts available at this time</h4></li>
-      {% endfor %}
-      </ul>
-
-      <a href="{% url 'chart_add' resource.id %}">Generate New Chart</a>
       </article>
 
       <article id="comments" class="tab-pane">
@@ -469,21 +488,22 @@
         <a href="{% url "new_map" %}?layer={{resource.service_typename}}" class="btn btn-primary btn-block">{% trans "Create a Map" %}</a>
     </li>
 
+    <!-- Charts section -->
     <li class="list-group-item">
-      <h4>{% trans "Charts with this layer" %}</h4>
+      <h4>{% trans "Charts using this layer" %}</h4>
       {% if resource.maps %}
-        <p>{% trans "List of chart with this layer:" %}</p>
+        <p>{% trans "List of charts with this layer:" %}</p>
         {% endif %}
         <ul class="list-unstyled">
         {% for chart in resource.chart_set.all %}
             <li><a href="{% url 'chart_detail' chart.id %}">{{ chart.get_type_display }}</a>, Category field = {{chart.category}}, Quantity field = {{chart.quantity}}</li>
         {% empty %}
-            <li><h4>No charts available at this time</h4></li>
+            <li><p>No charts available at this time</p></li>
         {% endfor %}
         </ul>
     </li>
     {% if "download_resourcebase" in perms_list %}
-    <li class="list-group-item">
+    <li class="list-group-item" id="create-chart">
       <h4>{% trans "Create a chart using this layer" %}</h4>
       <p>{% trans "Click the button below to generate a new chart based on this layer, choosing a quantity and a category field." %}</p>
             <button class="btn btn-primary btn-md btn-block" data-toggle="collapse" data-target="#form" onclick="updateLinkAndTitle();">Create a chart</button>
@@ -553,8 +573,8 @@
 
                              </div>
                          </div>
-                         <button type="button" class="btn btn-primary btn-block" data-toggle="modal" data-target="#chart_popup" onclick="get_chart_popup()">Display chart</button>
-                         <button type="submit" class="btn btn-primary btn-block" onclick="title_eval();">Save chart</button>
+                         <button type="button" class="btn btn-primary btn-block" data-toggle="modal" data-target="#chart_popup" onclick="get_chart_popup()">Preview</button>
+                         <button type="submit" class="btn btn-primary btn-block" onclick="title_eval();">Save</button>
                </form>
           </div>
         </li>
