--- a/django_project/core/templates/admin/base_site.html
+++ b/django_project/core/templates/admin/base_site.html
@@ -8,5 +8,5 @@
 
 {% block extrahead %}
     <script src="{{ STATIC_URL }}lib/js/assets.min.js"></script>
-    {% include 'autocomplete_light/static.html' %}
+{#    {% include 'autocomplete_light/static.html' %}#}
 {% endblock %}
