--- a/django_project/core/templates/site_base.html
+++ b/django_project/core/templates/site_base.html
@@ -14,6 +14,7 @@
     <link href="{{ STATIC_URL }}geonode/css/ext-compatibility.css?v={{ VERSION }}" rel="stylesheet" />
     <style type="text/css">[ng\:cloak],[ng-cloak],[data-ng-cloak],[x-ng-cloak],.ng-cloak,.x-ng-cloak,.ng-hide:not(.ng-hide-animate){display:none !important;}</style>
     <link href="{{ STATIC_URL }}css/haitidata.css" rel="stylesheet"/>
+    <link href="{{ STATIC_URL }}css/custom_haitidata.css" rel="stylesheet"/>
     {% block extra_head %}
     {% endblock %}
 {% endblock %}
