--- a/django_project/core/templates/charts_app/chart_update_form.html
+++ b/django_project/core/templates/charts_app/chart_update_form.html
@@ -136,9 +136,9 @@
           </div>
       </li>
       <li class="list-group-item">
-         <a href="{% url 'chart_delete' object.id %}" id="del_chart">
-              <button class="btn btn-primary btn-md btn-block">{% trans "Delete this Chart" %}</button>
-         </a>
+{#         <a href="{% url '' %}" id="del_chart">#}
+{#              <button class="btn btn-primary btn-md btn-block">{% trans "Delete this Chart" %}</button>#}
+{#         </a>#}
       </li>
   </div>
 </div>
