Add rectangle draw

--- a/django_project/core/templates/layers/download_clip.html
+++ b/django_project/core/templates/layers/download_clip.html
@@ -58,7 +58,7 @@
             draw: {
                 polyline: false,
                 circle: false,
-                rectangle: false,
+                rectangle: true,
                 marker: false,
                 polygon: {
                     allowIntersection: false,
